--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 06:39:00 AM</p>
+    <p class="lastupdate">09/09/2020 06:44:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">56.9&#176;F</td>
+        <td class="data">56.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">56.9&#176;F</td>
+        <td class="data">56.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">56.9&#176;F</td>
+        <td class="data">56.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.5&#176;F</td>
+        <td class="data">50.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.778 inHg (0.044)</td>
+        <td class="data">29.778 inHg (0.048)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">2 mph SW (225&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.3&#176;F</td>
+        <td class="data">74.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             65.4</span><br/>
-          <span title="06:33:29 AM">
-            56.9</span>
+          <span title="06:39:37 AM">
+            56.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
             117.5</span><br/>
-          <span title="06:33:29 AM (Wednesday)">
-            56.9</span>
+          <span title="06:39:37 AM (Wednesday)">
+            56.8</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="06:33:29 AM" class="loval">
-            56.9</span>
+          <span title="06:39:37 AM" class="loval">
+            56.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:33:29 AM (Wednesday)" class="loval">
-            56.9</span>
+          <span title="06:39:37 AM (Wednesday)" class="loval">
+            56.8</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="06:02:00 AM">
-            79</span><br/>
+          <span title="06:41:27 AM">
+            80</span><br/>
           <span title="12:00:01 AM">
             63</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:02:00 AM (Wednesday)">
-            79</span><br/>
+          <span title="06:41:27 AM (Wednesday)">
+            80</span><br/>
           <span title="04:59:20 PM (Sunday)">
             9</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          356
+          355
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 15 hours, 52 minutes</td>
+      <td class="data">7 days, 15 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 15 hours, 52 minutes</td>
+      <td class="data">7 days, 15 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
