--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 07:34:00 AM</p>
+    <p class="lastupdate">09/09/2020 07:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">56.9&#176;F</td>
+        <td class="data">56.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">56.9&#176;F</td>
+        <td class="data">56.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">56.9&#176;F</td>
+        <td class="data">56.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.4&#176;F</td>
+        <td class="data">52.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.816 inHg (0.071)</td>
+        <td class="data">29.813 inHg (0.064)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph NE (45&#176;)</td>
+        <td class="data">2 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">72.8&#176;F</td>
+        <td class="data">72.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -119,7 +119,7 @@
         <tr>
           <td class="label">Moon Phase</td>
           <td class="data">Last quarter<br/>
-            57%</td>
+            56%</td>
         </tr>
       </table>
     </div>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          356
+          357
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 16 hours, 47 minutes</td>
+      <td class="data">7 days, 16 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 16 hours, 47 minutes</td>
+      <td class="data">7 days, 16 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
