--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 07:39:00 AM</p>
+    <p class="lastupdate">09/09/2020 07:44:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.3&#176;F</td>
+        <td class="data">52.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">85%</td>
+        <td class="data">84%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.813 inHg (0.064)</td>
+        <td class="data">29.808 inHg (0.063)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph SSW (202&#176;)</td>
+        <td class="data">3 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">72.9&#176;F</td>
+        <td class="data">72.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">47%</td>
+        <td class="data">48%</td>
       </tr>
     </tbody>
   </table>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="07:33:01 AM">
-            29.816</span><br/>
+          <span title="07:41:01 AM">
+            29.818</span><br/>
           <span title="12:01:01 AM">
             29.700</span>
         </td>
@@ -472,14 +472,14 @@
         <td class="data new_row hilo_day">
           <span title="12:26:01 AM">
             78.1</span><br/>
-          <span title="07:11:01 AM">
-            72.8</span>
+          <span title="07:43:01 AM">
+            72.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
             91.8</span><br/>
-          <span title="07:11:01 AM (Wednesday)">
-            72.8</span>
+          <span title="07:43:01 AM (Wednesday)">
+            72.7</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 04:03:02 PM">
@@ -505,14 +505,14 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="07:25:01 AM">
-            47</span><br/>
+          <span title="07:43:01 AM">
+            48</span><br/>
           <span title="12:00:01 AM">
             42</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="07:25:01 AM (Wednesday)">
-            47</span><br/>
+          <span title="07:43:01 AM (Wednesday)">
+            48</span><br/>
           <span title="12:07:01 AM (Tuesday)">
             28</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 16 hours, 52 minutes</td>
+      <td class="data">7 days, 16 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 16 hours, 52 minutes</td>
+      <td class="data">7 days, 16 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
