--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 07:44:00 AM</p>
+    <p class="lastupdate">09/09/2020 07:49:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.0&#176;F</td>
+        <td class="data">52.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">84%</td>
+        <td class="data">85%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.808 inHg (0.063)</td>
+        <td class="data">29.819 inHg (0.078)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NNE (22&#176;)</td>
+        <td class="data">4 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">72.7&#176;F</td>
+        <td class="data">72.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="07:41:01 AM">
-            29.818</span><br/>
+          <span title="07:45:01 AM">
+            29.821</span><br/>
           <span title="12:01:01 AM">
             29.700</span>
         </td>
@@ -472,14 +472,14 @@
         <td class="data new_row hilo_day">
           <span title="12:26:01 AM">
             78.1</span><br/>
-          <span title="07:43:01 AM">
-            72.7</span>
+          <span title="07:46:01 AM">
+            72.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
             91.8</span><br/>
-          <span title="07:43:01 AM (Wednesday)">
-            72.7</span>
+          <span title="07:46:01 AM (Wednesday)">
+            72.6</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 04:03:02 PM">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">90%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 16 hours, 57 minutes</td>
+      <td class="data">7 days, 17 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 16 hours, 57 minutes</td>
+      <td class="data">7 days, 17 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
