--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 07:54:00 AM</p>
+    <p class="lastupdate">09/09/2020 07:59:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.818 inHg (0.070)</td>
+        <td class="data">29.817 inHg (0.066)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph NNE (22&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">72.5&#176;F</td>
+        <td class="data">72.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          358
+          357
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -472,14 +472,14 @@
         <td class="data new_row hilo_day">
           <span title="12:26:01 AM">
             78.1</span><br/>
-          <span title="07:50:01 AM">
-            72.5</span>
+          <span title="07:58:01 AM">
+            72.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
             91.8</span><br/>
-          <span title="07:50:01 AM (Wednesday)">
-            72.5</span>
+          <span title="07:58:01 AM (Wednesday)">
+            72.2</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 04:03:02 PM">
@@ -505,14 +505,14 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="07:43:01 AM">
-            48</span><br/>
+          <span title="07:57:01 AM">
+            49</span><br/>
           <span title="12:00:01 AM">
             42</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="07:43:01 AM (Wednesday)">
-            48</span><br/>
+          <span title="07:57:01 AM (Wednesday)">
+            49</span><br/>
           <span title="12:07:01 AM (Tuesday)">
             28</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 17 hours, 7 minutes</td>
+      <td class="data">7 days, 17 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 17 hours, 7 minutes</td>
+      <td class="data">7 days, 17 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
